--- a/global.css
+++ b/global.css
@@ -1,7 +1,322 @@
-header {
-  height:60px;
-  width:100vw;
-  position:fixed;
-  background-color:lightgrey;
-  color:black;
+@import"https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css";@import"https://fonts.googleapis.com/css?family=Roboto:400,300,500,700,400italic,500italic";span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,video {
+    margin: 0;
+    padding: 3px;
+    border: 0;
+    outline: 0;
+    font-size: 110%;
+    vertical-align: baseline;
+    background: rgba(0,0,0,0)
 }
+html {
+    height: 100%;
+    font-family: "Roboto","aktiv grotesk","Helvetica Neue","Helvetica",arial,sans-serif;
+}
+body::-webkit-scrollbar {
+    display: none;
+}
+body {
+    margin: 0;
+    padding: 0;
+    background-color: white;
+}
+header {
+    background-color: #002D72;
+    padding:3px;
+    display: block;
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 8000;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    text-align:right;
+}
+footer {
+    padding: 2px;
+    background-color: #FF6720;
+    color: #000;
+    height:30;
+    position: fixed;
+    bottom:0;
+    width:100vw;
+    font-size:60%;
+}
+/* only change stuff below here */
+a {
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: rgba(0,0,0,0)
+}
+/* end body */
+/* buttons */
+
+/*end other buttons*/
+/* header stuff */
+.headerbtn{
+    color:#002D72;
+    border:0px; 
+    background:transparent;
+    text-decoration:none; 
+    font-size:70%; 
+    position:fixed; 
+    display: inline-block;
+    padding: 12px 15px 13px;
+    transition: all 0.3s ease;
+    font-family: "Roboto","aktiv grotesk","Helvetica Neue","Helvetica",arial,sans-serif
+}
+.headerbtn:hover {
+    color:black;
+}
+.menu-button {
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 20px;
+      margin-top:-10px;
+      margin-left: 10px;
+    }
+    .menu-button span {
+      width: 25px;
+      height: 3px;
+      background-color:white;
+      margin-bottom:5px;
+      border-radius:10px;
+    }
+    .sidebar {
+      position: fixed;
+      top: 60px; /* below header */
+      left: -500px;
+      width: 500px;
+      height: calc(100% - 60px);
+      background-color: white;
+      transition: left 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      padding-top: 10px;
+      z-index: 999;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+    .sidebar.open {
+      left: 0;
+    }
+    .sidebar a {
+      color: black;
+      text-decoration: none;
+      padding: 10px;
+      display: block;
+    }
+    .sidebar a:not(:last-child) {
+      margin-bottom: 10px;
+    }
+    .logo {
+      height: 60px;
+    }
+    .search-container {
+      position: relative;
+      width: 250px;
+      display: flex;
+      justify-content: flex-end;
+    }
+    .search-bar {
+      display: flex;
+      align-items: center;
+      background-color: transparent;
+      height: 45px;
+      width: 45px;
+      border-radius: 5px;
+      padding: 5px;
+      transition: width 0.3s ease, border-radius 0.3s ease;
+      overflow: hidden;
+    }
+    .search-bar.expanded {
+      width: 100%;
+      border-radius: 0px;
+    }
+    .search-bar input {
+      border: none;
+      outline: none;
+      background: transparent;
+      color: white;
+      margin-left: 10px;
+      width: 100%;
+      display: none;
+      border-bottom: 1px solid white;
+      padding: 2px;
+    }
+    .search-bar.expanded input {
+      display: inline-block;
+    }
+    #searchBtn {
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: black;
+      font-size: 16px;
+      filter: brightness(900%)
+    }
+    .search-results {
+      position: absolute;
+      top: 45px;
+      right: 0;
+      background: white;
+      color: #002D72;
+      width: 240px;
+      padding: 5px;
+      display: none;
+      z-index: 999;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+    .search-results.show {
+      display: block;
+    }
+    .search-result {
+      padding: 5px 10px;
+      cursor: pointer;
+      border-bottom: 1px solid #444;
+    }
+    .search-result:last-child {
+      border-bottom: none;
+    }
+    .search-result:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+    .search-result-title {
+      font-weight: bold;
+    }
+    .search-result-description {
+      font-size: 12px;
+    }
+    .no-results {
+      padding: 5px 10px;
+      color: #002D72;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    header > * {
+      flex-shrink: 0;
+    }
+    ::placeholder {
+     color: white;
+    }
+    .icons {
+      height:20px;
+      width:20px;
+      border-radius:7px;
+    } 
+    .icon-group {
+      display: inline-block;
+      width: 150px;
+      text-align: center;
+      margin: 20px;
+      text-decoration: none;
+      color: black;
+      margin-left: 5vw;
+    }
+    .icon-group:hover {
+      color:#002D72
+    }
+    .cntcticons {
+      height: 150px;
+      width: 150px;
+      border-radius: 20px;
+      margin-top: 10px;
+    }
+    .contact-sidebar {
+        position: absolute;
+        right: 20px;
+        top: 100px;
+        background-color: #f8f8f8;
+        padding: 15px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        margin-right: 100px;
+        margin-top: 40px;
+        transition:all 0.5s;
+    }
+    .home-sidebar {
+        position: absolute;
+        background-color: #f8f8f8;
+        padding: 15px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        margin-left: 10vw;
+        margin-top: 5vh;
+        max-width: 600px;
+        transition:all 0.5s;
+    }
+    #carousel-container {
+      width: 600px;
+      height: 400px;
+      margin: 0 auto;
+      position: absolute;
+      right:60;
+      margin-top:50px;
+      overflow: hidden;
+      border-radius: 15px;
+      box-shadow: 0 0 10px #000;
+    }
+    #carousel-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 1;
+      transition: opacity 1s ease;
+    }
+    .dots-container {
+      position: absolute;
+      bottom: 15px;
+      left: 50%;
+      padding:10px;
+      background-color:black;
+      opacity:0.7;
+      border-radius:50px;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 10px;
+      z-index: 2;
+    }
+    .dot {
+      width: 12px;
+      height: 12px;
+      background-color: white;
+      border-radius: 50%;
+      opacity: 1;
+      cursor: pointer;
+      transition: transform 0.3s, opacity 0.3s;
+    }
+    .dot.active {
+      transform: scale(1.2);
+      opacity: 1;
+    }
+    .sponsors-list {
+        display: inline-block;
+        width: 150px;
+        text-align: center;
+        margin: 20px;
+        text-decoration: none;
+        color: black;
+        align-content: center;
+    }
+    .donation-box {
+        position: absolute;
+        left: 20px;
+        top: 100px;
+        background-color: #f8f8f8;
+        padding: 15px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        margin-left: 100px;
+        margin-top: 40px;
+        max-width: 600px;
+        transition:all 0.5s;
+    }
